--- a/Kernkraftwerk/bin/.gitignore
+++ b/Kernkraftwerk/bin/.gitignore
@@ -1,7 +1,10 @@
-/Test.class
-/Waermetauscher.class
-/Kuehlkreislauf/
-/JUnit/
 /Exception/
-/Simulation/
+/JUnit/
 /Kreislauf/
+/Simulation/
+/Fluss.class
+/Leitware.class
+/Pumpe.class
+/Reaktor.class
+/Waermetauscher.class
+/Wasserelement.class
